--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist",
+                        "outputPath": "docs",
+                        "baseHref": "/MRH/",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
